<?xml version="1.0"?>
<package format="3">
  <name>my_dynamixel_controller</name>
  <version>0.0.0</version>
  <description>ROS2 package for Dynamixel logging service</description>
  <maintainer email="4525562@ed.tus.ac.jp">reo</maintainer>
  <license>MIT</license>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_python</exec_depend>



  <export>
  <build_type>ament_cmake</build_type>
  </export>

</package>
